<resources>
    <string name="app_name">Coffee House</string>
    <string name="home">Home</string>
    <string name="add_coffee">Add Coffee</string>
    <string name="all_coffees">All Coffees</string>
    <string name="about_us">About us</string>
    <string name="our_history">Our history</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="roasting_level">Roasting Level</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
    <string name="not_implemented">Not implemented yet</string>
</resources>