<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryVariant"
    android:padding="16dp"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/home"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Home" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/title">

        <TableRow>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_coffee"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/add_coffee"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/all_coffees"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/all_coffees"
                android:textSize="18sp" />
        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/about_us"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/about_us"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/history"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/our_history"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>